# practical04-depth

./: README.md  datastore.py  kv_get.py  kv_put.py  pyproject.toml
.github/: cspell.json
.github/workflows/: grade.yml
config/: gatorgrade.yml
writing/: reflection.md
