[tool.poetry]
name = "practical04-deep-modules-solution"
version = "0.1.0"
description = ""
authors = ["Janyl Jumadinova <jjumadinova@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
